--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Noto sans 9
+font pango:Noto sans 12
 
 gaps inner 8
 gaps outer 8
@@ -63,10 +63,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -103,13 +103,13 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: Work "
-set $ws2 "2: Music "
-set $ws3 "3: Design "
-set $ws4 "4: Chat "
+set $ws1 ""
+set $ws2 ""
+set $ws3 ""
+set $ws4 ""
 set $ws5 "5: Git "
-set $ws6 "6: Chrome "
-set $ws7 "7: Firefox "
+set $ws6 ""
+set $ws7 ""
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10: Random "
