--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Noto sans 11
+font pango:Ubuntu Regular 10
 
 gaps inner 8
 gaps outer 8
