--- a/.config/i3/config
+++ b/.config/i3/config
@@ -225,7 +225,7 @@ bar {
   }
 }
 
-exec_always feh --bg-scale Pictures/wallhaven-638670.jpg 
+exec_always feh --bg-fill Pictures/1.jpg 
 exec_always xrandr --output DVI-0 --auto --left-of HDMI-0
 exec_always compton -b
 exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
