--- a/.config/i3/config
+++ b/.config/i3/config
@@ -107,13 +107,13 @@ bindsym Shift+Print exec mate-screenshot -w
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 ""
-set $ws2 ""
-set $ws3 ""
-set $ws4 ""
-set $ws5 "5: Git "
-set $ws6 ""
-set $ws7 ""
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: "
+set $ws5 "5: "
+set $ws6 "6: "
+set $ws7 ""
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10: Random "
@@ -192,7 +192,6 @@ set $photopea /opt/google/chrome/google-chrome --profile-directory=Default --app
 # Assign Workspaces
 # assign [class="^google-music$"] $ws2
 
-
 bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -227,8 +226,6 @@ bar {
 
 exec_always feh --bg-fill Pictures/1.jpg 
 exec_always xrandr --output DVI-0 --auto --left-of HDMI-0
-exec_always compton -b
 exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
+exec_always --no-startup-id compton
 
-# Google Play Music
-exec_always [--no-startup-id] $google-music
