--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,16 +10,17 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $term alacritty
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Ubuntu Regular 10
+font pango:Ubuntu Bold 12
 
 gaps inner 16
 gaps outer 8
 
-for_window [class="^.*"] border pixel 1
-new_window 1pixel
+for_window [class="^.*"] border pixel 0
+#new_window 0pixel
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -36,9 +37,8 @@ new_window 1pixel
 floating_modifier $mod
 
 # start a terminal
-
 #bindsym $mod+Return exec mate-terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec $term
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -112,11 +112,11 @@ set $ws2 "2: "
 set $ws3 "3: "
 set $ws4 "4: "
 set $ws5 "5: "
-set $ws6 "6: "
-set $ws7 ""
+set $ws6 "6: "
+set $ws7 "7: "
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "10: Random "
+set $ws10 "10: "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -199,13 +199,13 @@ bindsym $mod+r mode "resize"
 
 # Color variables
 set $transparent #00000000
-set $maincolor #40c4ff
-set $darkcolor #000a12
-set $darkcolortr #000a1200
-set $successcolor #087f23
+set $blue #40c4ff
+set $black #282828
+set $green #b7e876
+set $yellow #ffc251
 set $graycolor #78909c
 set $darkgraycolor #263238
-set $warncolor #ff0000
+set $red #ff355b
 
 bar {
   status_command python3 ~/dotfiles/bar.py
@@ -213,19 +213,20 @@ bar {
   colors {
     #statusline #ececec
     separator $darkgraycolor
-    background $darkcolor
+    background $black
 
     #                      BORDER          BACKGROUND         TEXT
-    focused_workspace      $maincolor      $maincolor         $darkcolor
-    inactive_workspace     $darkcolor      $darkcolor         $maincolor
-    active_workspace       $darkcolor      $darkcolor         #ffffff
+    focused_workspace      $blue           $blue              $black
+    inactive_workspace     $black          $black             $blue
+    active_workspace       $black          $black             #ffffff
     urgent_workspace       $warncolor      $warncolor         #ffffff
     binding_mode           $darkred        $darkred           $transparent
   }
 }
 
-exec_always feh --bg-fill Pictures/1.jpg 
+#exec_always feh --bg-fill Pictures/1.jpg 
 exec_always xrandr --output DVI-0 --auto --left-of HDMI-0
 exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
 exec_always --no-startup-id compton
+exec_always hsetroot -add "#08AEEA" -add "#2AF5D2" -gradient 0
 
