--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,12 +44,15 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec i3-dmenu-desktop
+bindsym $mod+d exec rofi -show run 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
+bindsym Print exec  scrot -e 'xclip -selection clipboard -t "image/png" < $f'
+bindsym Shift+Print exec scrot -s -e 'xclip -selection clipboard -t "image/png" < $f'
+bindsym Ctrl+Print exec scrot -u -e 'xclip -selection clipboard -t "image/png" < $f'
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -102,8 +105,8 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # Screenshot
-bindsym Print exec mate-screenshot -a
-bindsym Shift+Print exec mate-screenshot -w
+# bindsym Print exec mate-screenshot -a
+# bindsym Shift+Print exec mate-screenshot -w
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
