--- a/.config/i3/config
+++ b/.config/i3/config
@@ -40,6 +40,7 @@ floating_modifier $mod
 #bindsym $mod+Return exec mate-terminal
 bindsym $mod+Return exec $term -e tmux
 
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
@@ -143,6 +144,7 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+bindsym $mod+Shift+x exec i3lock
 
 
 # reload the configuration file
