--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -61,7 +61,7 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Ubuntu Mono # should be "Menlo" or something on macOS.
+    family: UbuntuMono Nerd Font # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
@@ -78,7 +78,7 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 9.5
+  size: 8.5
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
