thinkpad volume buttons

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -202,6 +202,8 @@ exec_always xrandr --output LVDS-1 --auto --left-of VGA-1
 exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
 exec --no-startup-id compton
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-sink-input-mute @DEFAULT_SINK@ toggle # mute sound
+
