--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -67,13 +67,13 @@ font:
 
   # The bold font face
   bold:
-    family: Ubuntu Mono # should be "Menlo" or something on macOS.
+    family: Ubuntu Mono Nerd Font # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
   # The italic font face
   italic:
-    family: Ubuntu Mono # should be "Menlo" or something on macOS.
+    family: Ubuntu Mono Nerd Font # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Italic
 
