--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,14 +1,16 @@
 [colors]
-background = #222
+background = 
 background-alt = #444
 foreground = #dfdfdf
 foreground-alt = #555
 primary = #ececec
 secondary = #ececec
-alert = #ececec
+alert = #FF355B
+success = #B7E876
 
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 21
 
@@ -30,12 +32,12 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-0 = Ubuntu Mono Nerd Font:pixelsize=10;1
+font-1 = Ubuntu Mono Nerd Font:fontformat=truetype:size=8:antialias=false;0
+font-2 = Ubuntu Mono Nerd Font:pixelsize=10;1
 
-modules-left = bspwm i3
-modules-center = 
+modules-left = 
+modules-center = bspwm i3 
 modules-right = pulseaudio xkeyboard cpu battery temperature date
 
 tray-position = right
@@ -118,6 +120,13 @@ wrapping-scroll = false
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
+ws-icon-0 = q
+ws-icon-1 = 2;♛
+ws-icon-2 = 3;♜
+ws-icon-3 = 4;♝
+ws-icon-4 = 5;♞
+ws-icon-default = ♟
+
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
@@ -134,8 +143,8 @@ label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
+label-visible-background = 
+label-visible-underline = ${colors.success}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
@@ -145,6 +154,8 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 ; Separator in between workspaces
 ; label-separator = |
+
+
 
 
 [module/mpd]
@@ -319,26 +330,26 @@ format-charging-underline = #ffb52a
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+format-full-prefix = 
+format-full-prefix-foreground = ${colors.success}
+;format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+ramp-capacity-foreground = #ececec
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-foreground = #ececec;
+animation-charging-framerate = 1500
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-foreground = ${colors.alert}
+animation-discharging-framerate = 1500
 
 [module/temperature]
 type = internal/temperature
