--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,8 +43,8 @@ bind -n M-k resize-pane -U
 bind -n M-j resize-pane -D
 
 # WINDOW-SWITCHING
-bind -n C-z previous-window
-bind -n C-x next-window
+bind -n C-m previous-window
+bind -n C-n next-window
 
 ###### VISUAL #####################################
 
