--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -45,7 +45,7 @@ blur-background-exclude = [
 
 
 # Fading
-fading = true;
+fading = false;
 # fade-delta = 30;
 fade-in-step = 0.08;
 fade-out-step = 0.08;
