--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,8 +7,8 @@ set $term alacritty
 # is used in the bar {} block below.
 font pango:Ubuntu Regular 10
 
-gaps inner 8
-gaps outer 8
+gaps inner 2
+#gaps outer 1
 
 for_window [class="^.*"] border pixel 0
 #new_window 0pixel
@@ -23,7 +23,7 @@ bindsym $mod+Return exec $term -e tmux
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run 
+bindsym $mod+d exec rofi -show drun -modi drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
@@ -187,5 +187,7 @@ exec_always --no-startup-id twmnd
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
+bindsym XF86Launch1 exec --no-startup-id alacritty -e nvim
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-sink-input-mute @DEFAULT_SINK@ toggle # mute sound
 exec --no-startup-id dockd --daemon
+bindsym $mod+p exec /home/fami/.config/i3/i3lock-multimonitor/lock
