--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,44 +1,45 @@
 [colors]
-background = 
+background = #bb000000 
 background-alt = #444
-foreground = #dfdfdf
+foreground = #ececec
 foreground-alt = #555
 primary = #ececec
 secondary = #ececec
 alert = #FF355B
 success = #B7E876
+gray = #303030
 
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 monitor = ${env:MONITOR:}
 width = 100%
-height = 21
+height = 25
 
-radius = 3.0
+radius = 0
 fixed-center = true
 
-background = ${colors.background}
+background = ${colors.background} 
 foreground = ${colors.foreground}
 
 line-size = 0
 line-color = #f00
 
-border-size = 4
+border-size = 0
 border-color = #00000000
 
 padding-left = 0
 padding-right = 2
 
-module-margin-left = 1
+module-margin-left = 8
 module-margin-right = 2
 
-font-0 = Ubuntu Mono Nerd Font:pixelsize=10;1
-font-1 = Ubuntu Mono Nerd Font:fontformat=truetype:size=8:antialias=false;0
+font-0 = Ubuntu Nerd Font:pixelsize=9.5;2
+font-1 = Ubuntu Mono Nerd Font:fontformat=truetype:size=10:antialias=false;0
 font-2 = Ubuntu Mono Nerd Font:pixelsize=10;1
 
-modules-left = 
-modules-center = bspwm i3 
-modules-right = pulseaudio xkeyboard cpu battery temperature date
+modules-left = i3
+modules-center = 
+modules-right = pulseaudio xkeyboard battery date
 
 tray-position = right
 tray-padding = 2
@@ -67,15 +68,15 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+format-prefix = "פֿ "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
 label-layout = %layout%
 label-layout-underline = ${colors.secondary}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
+label-indicator-padding = 20
+label-indicator-margin = 10
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
 
@@ -121,15 +122,15 @@ wrapping-scroll = false
 ;pin-workspaces = true
 
 ws-icon-0 = q
-ws-icon-1 = 2;♛
+ws-icon-1 = ﴔ
 ws-icon-2 = 3;♜
 ws-icon-3 = 4;♝
 ws-icon-4 = 5;♞
 ws-icon-default = ♟
 
-label-mode-padding = 2
+label-mode-padding = 20
 label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-mode-background = #000
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
@@ -143,8 +144,8 @@ label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
-label-visible-background = 
-label-visible-underline = ${colors.success}
+label-visible-background = ${colors.gray}
+label-visible-underline = #ff0000
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
@@ -257,7 +258,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = ﲊ
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -266,11 +267,11 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+format-volume = <label-volume>
+label-volume = ﱘ  %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
+label-muted = ﱙ 
 label-muted-foreground = #666
 
 bar-volume-width = 10
@@ -348,7 +349,7 @@ animation-charging-framerate = 1500
 animation-discharging-0 = 
 animation-discharging-1 = 
 animation-discharging-2 = 
-animation-discharging-foreground = ${colors.alert}
+animation-discharging-foreground = ${colors.gray}
 animation-discharging-framerate = 1500
 
 [module/temperature]
