--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,14 +1,14 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-set $term alacritty
+set $term terminator
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Ubuntu Regular 10
 
-gaps inner 2
-#gaps outer 1
+gaps inner 4
+gaps outer 4
 
 for_window [class="^.*"] border pixel 0
 #new_window 0pixel
@@ -17,7 +17,7 @@ for_window [class="^.*"] border pixel 0
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec $term -e tmux
+bindsym $mod+Return exec $term
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -177,9 +177,9 @@ set $graycolor #78909c
 set $darkgraycolor #263238
 set $red #ff355b
 
+exec arandr -e ~/.screenlayout/1.sh
 exec ~/.fehbg
 exec_always --no-startup-id ~/.config/polybar/launch.sh
-exec_always xrandr --output LVDS-1 --auto --left-of VGA-1
 exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
 exec --no-startup-id compton
 exec_always --no-startup-id twmnd
