--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,7 +1,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-set $term terminator
+set $term alacritty
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -26,7 +26,8 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec rofi -show drun -modi drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -181,7 +182,7 @@ exec --no-startup-id ~/.screenlayout/1.sh
 exec ~/.fehbg
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 exec_always setxkbmap -layout us,ru -option grp:alt_shift_toggle
-exec --no-startup-id compton
+exec_always --no-startup-id compton
 exec_always --no-startup-id twmnd
 
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
