--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -33,7 +33,7 @@ padding-right = 2
 module-margin-left = 8
 module-margin-right = 2
 
-font-0 = Ubuntu Nerd Font:pixelsize=9.5;2
+font-0 = Noto:pixelsize=10;2
 font-1 = Ubuntu Mono Nerd Font:fontformat=truetype:size=10:antialias=false;0
 font-2 = Ubuntu Mono Nerd Font:pixelsize=10;1
 
