fix: tmux, rofi

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ bind -n M-j resize-pane -D
 
 # WINDOW-SWITCHING
 bind -n C-z previous-window
-bind -n C-n next-window
+bind -n C-x next-window
 
 ###### VISUAL #####################################
 
