--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,7 @@ bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -modi drun
+bindsym $mod+d exec rofi -show drun -theme solarized -font "Noto Sans 10" drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
