--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -26,7 +26,7 @@ shadow-exclude = [
 menu-opacity = 0.8;
 #inactive-opacity = 0.8;
  #active-opacity = 0.8;
-frame-opacity = 0.7;
+frame-opacity = 0.8;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.2;
@@ -41,7 +41,7 @@ blur-background-exclude = [
 	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
- opacity-rule = [ "85:name *= 'Alacritty'" ];
+ #opacity-rule = [ "0:name *= 'Alacritty'" ];
 
 
 # Fading
@@ -85,7 +85,7 @@ glx-swap-method = "undefined";
 # xrender-sync-fence = true;
 
 # Window type settings
-wintypes:
-{
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
-};
+#wintypes:
+#{
+  #tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+#};
